# k8z

./: Cargo.toml  test.yaml
src/: main.rs
