[package]
name = "k8z"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.2.1", features = ["derive"] }
inquire = { version = "0.6.1", features = ["date"] }
kube = { version = "0.82.0", features = ["runtime", "derive"] }
